# imrs

./: .gitignore  Cargo.toml  Dockerfile  README.md  dev.sh  prod.sh
.github/workflows/: container.yml  rust.yml
frontend/: Cargo.toml  index.html
frontend/src/: image_future.rs  main.rs  text_input.rs
imrs/: Cargo.toml
imrs/src/: lib.rs  main.rs  plot.rs  tvshow.rs
notebooks/: Test.ipynb
server/: Cargo.toml
server/src/: api.rs  main.rs  opt.rs  state.rs
server/src/api/: image.rs  slack.rs
