[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
futures = "0.3.28"
gloo = "0.8.1"
gloo-net = "0.3.0"
log = "0.4.19"
urlencoding = "2.1.2"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.64", features = ["HtmlImageElement"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
