[package]
name = "imrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.9", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
plotters = "0.3.5"
regex = "1.8.4"
reqwest = { version = "0.11.18", features = ["rustls-tls"] }
scraper = "0.17.1"
thiserror = "1.0.40"
tokio = { version = "1.29.1", features = ["full"] }
tracing = { version = "0.1.37", features = ["log"] }
