[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
clap = { version = "4.3.9", features = ["derive"] }
log = "0.4.19"
tokio = { version = "1.29.0", features = ["full"] }
