[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
clap = { version = "4.3.9", features = ["derive", "env"] }
image = "0.24.6"
log = "0.4.19"
tokio = { version = "1.29.0", features = ["full", "tracing"] }
tower = "0.4.13"
tower-http = { version = "0.4.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
imrs = { path = "../imrs" }
plotters = "0.3.5"
serde = { version = "1.0.164", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["rustls-tls", "json"] }
chrono = "0.4.26"
anyhow = "1.0.71"
urlencoding = "2.1.2"
console-subscriber = "0.1.10"
